Fix for bug #8430 (CEILING returns incorrect result)